--- a/sass/style.css
+++ b/sass/style.css
@@ -2359,9 +2359,17 @@ header .container-titre button:hover {
   font-size: 30px;
   margin: 0 0 30px 20px;
 }
-#restaurant .container-global .container-carte {
-  text-decoration: none;
+#restaurant .container-global .container-global-carte {
+  background: #fff;
   width: 90%;
+  height: 250px;
+  position: relative;
+  margin-bottom: 40px;
+  border-radius: 20px;
+}
+#restaurant .container-global .container-global-carte .container-carte {
+  text-decoration: none;
+  width: 250px;
   height: 250px;
   background: #fff;
   border-radius: 20px;
@@ -2371,34 +2379,34 @@ header .container-titre button:hover {
   cursor: pointer;
   color: #000;
 }
-#restaurant .container-global .container-carte .content-img {
+#restaurant .container-global .container-global-carte .container-carte .content-img {
   width: 100%;
   height: 160px;
   border-radius: 20px 20px 0 0;
   position: relative;
   overflow: hidden;
 }
-#restaurant .container-global .container-carte .content-img img {
+#restaurant .container-global .container-global-carte .container-carte .content-img img {
   position: relative;
   width: 100%;
   top: -60px;
 }
-#restaurant .container-global .container-carte .content-img .img-4 {
+#restaurant .container-global .container-global-carte .container-carte .content-img .img-4 {
   position: relative;
   width: 100%;
   top: -80px;
 }
-#restaurant .container-global .container-carte .content-img .img-3 {
+#restaurant .container-global .container-global-carte .container-carte .content-img .img-3 {
   position: relative;
   width: 100%;
   top: -70px;
 }
-#restaurant .container-global .container-carte .content-img .img-2 {
+#restaurant .container-global .container-global-carte .container-carte .content-img .img-2 {
   position: relative;
   width: 100%;
   top: -160px;
 }
-#restaurant .container-global .container-carte .content-img p {
+#restaurant .container-global .container-global-carte .container-carte .content-img p {
   position: absolute;
   top: 15px;
   right: 15px;
@@ -2407,7 +2415,7 @@ header .container-titre button:hover {
   border-radius: 2px;
   color: green;
 }
-#restaurant .container-global .container-carte .container-information {
+#restaurant .container-global .container-global-carte .container-carte .container-information {
   width: 100%;
   height: 100px;
   display: flex;
@@ -2417,32 +2425,32 @@ header .container-titre button:hover {
   position: relative;
   z-index: 1000;
 }
-#restaurant .container-global .container-carte .container-information .content-information h4 {
+#restaurant .container-global .container-global-carte .container-carte .container-information .content-information h4 {
   font-size: 18px;
   margin-bottom: 5px;
 }
-#restaurant .container-global .container-carte .container-information .content-information p {
+#restaurant .container-global .container-global-carte .container-carte .container-information .content-information p {
   font-size: 16px;
 }
-#restaurant .container-global .container-carte .container-information .container-hearth {
+#restaurant .container-global .container-global-carte .container-hearth {
   position: absolute;
   right: 50px;
-  top: 40px;
+  bottom: 60px;
   cursor: pointer;
   z-index: 1000;
 }
-#restaurant .container-global .container-carte .container-information .container-hearth i {
+#restaurant .container-global .container-global-carte .container-hearth i {
   position: absolute;
   font-size: 22px;
   z-index: 1000;
 }
-#restaurant .container-global .container-carte .container-information .icon-regular {
+#restaurant .container-global .container-global-carte .icon-regular {
   position: absolute;
   opacity: 1;
   transition: 0.5s ease-in;
   z-index: 1000;
 }
-#restaurant .container-global .container-carte .container-information .icon-solid {
+#restaurant .container-global .container-global-carte .icon-solid {
   background-image: linear-gradient(168deg, rgba(255, 121, 217, 0.87) 0%, rgba(147, 86, 220, 0.87) 100%);
   background-clip: text;
   -webkit-background-clip: text;
@@ -2452,10 +2460,10 @@ header .container-titre button:hover {
   position: absolute;
   z-index: 1000;
 }
-#restaurant .container-global .container-carte .container-information .icon-solid:active {
+#restaurant .container-global .container-global-carte .icon-solid:hover {
   opacity: 1;
 }
-#restaurant .container-global .container-carte .container-information .container-hearth:active .icon-regular {
+#restaurant .container-global .container-global-carte .container-hearth:hover .icon-regular {
   opacity: 0;
 }
 
@@ -2599,38 +2607,38 @@ footer .content-link a {
     transition: 0.4s ease-in-out;
   }
 
-  #restaurant .container-global .container-carte {
+  #restaurant .container-global .container-global-carte {
     width: 65%;
     height: 270px;
   }
-  #restaurant .container-global .container-carte .content-img {
+  #restaurant .container-global .container-global-carte .container-carte .content-img {
     width: 100%;
     height: 180px;
     border-radius: 20px 20px 0 0;
     position: relative;
     overflow: hidden;
   }
-  #restaurant .container-global .container-carte .content-img img {
+  #restaurant .container-global .container-global-carte .container-carte .content-img img {
     position: relative;
     width: 100%;
     top: -60px;
   }
-  #restaurant .container-global .container-carte .content-img .img-4 {
+  #restaurant .container-global .container-global-carte .container-carte .content-img .img-4 {
     position: relative;
     width: 100%;
-    top: -80px;
+    top: -130px;
   }
-  #restaurant .container-global .container-carte .content-img .img-3 {
+  #restaurant .container-global .container-global-carte .container-carte .content-img .img-3 {
     position: relative;
     width: 100%;
-    top: -70px;
+    top: -125px;
   }
-  #restaurant .container-global .container-carte .content-img .img-2 {
+  #restaurant .container-global .container-global-carte .container-carte .content-img .img-2 {
     position: relative;
     width: 100%;
-    top: -160px;
+    top: -250px;
   }
-  #restaurant .container-global .container-carte .content-img p {
+  #restaurant .container-global .container-global-carte .container-carte .content-img p {
     position: absolute;
     top: 15px;
     right: 15px;
@@ -2639,7 +2647,7 @@ footer .content-link a {
     border-radius: 2px;
     color: green;
   }
-  #restaurant .container-global .container-carte .container-information {
+  #restaurant .container-global .container-global-carte .container-carte .container-information {
     width: 100%;
     height: 100px;
     display: flex;
@@ -2647,41 +2655,15 @@ footer .content-link a {
     align-items: center;
     padding: 0px 0 20px 20px;
   }
-  #restaurant .container-global .container-carte .container-information .content-information h4 {
+  #restaurant .container-global .container-global-carte .container-carte .container-information .content-information h4 {
     font-size: 20px;
     margin-bottom: 5px;
   }
-  #restaurant .container-global .container-carte .container-information .content-information p {
+  #restaurant .container-global .container-global-carte .container-carte .container-information .content-information p {
     font-size: 18px;
   }
-  #restaurant .container-global .container-carte .container-information .container-hearth {
-    position: relative;
-    right: 50px;
-    top: -15px;
-    cursor: pointer;
-  }
-  #restaurant .container-global .container-carte .container-information .container-hearth i {
-    font-size: 24px;
-  }
-  #restaurant .container-global .container-carte .container-information .icon-regular {
-    position: absolute;
-    opacity: 1;
-    transition: 0.5s ease-in;
-  }
-  #restaurant .container-global .container-carte .container-information .icon-solid {
-    background-image: linear-gradient(168deg, rgba(255, 121, 217, 0.87) 0%, rgba(147, 86, 220, 0.87) 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    transition: 1s ease-in;
-    opacity: 0;
-    position: absolute;
-  }
-  #restaurant .container-global .container-carte .container-information .icon-solid:hover {
-    opacity: 1;
-  }
-  #restaurant .container-global .container-carte .container-information .container-hearth:hover .icon-regular {
-    opacity: 0;
+  #restaurant .container-global i {
+    font-size: 25px;
   }
 }
 @media screen and (min-width: 1024px) {
@@ -2820,40 +2802,40 @@ footer .content-link a {
   #restaurant .container-global .carte-2 {
     margin-top: 100px;
   }
-  #restaurant .container-global .container-carte {
+  #restaurant .container-global .container-global-carte {
     margin-right: 25px;
     margin-left: 25px;
     width: 40%;
     height: 270px;
   }
-  #restaurant .container-global .container-carte .content-img {
+  #restaurant .container-global .container-global-carte .container-carte .content-img {
     width: 100%;
     height: 180px;
     border-radius: 20px 20px 0 0;
     position: relative;
     overflow: hidden;
   }
-  #restaurant .container-global .container-carte .content-img img {
+  #restaurant .container-global .container-global-carte .container-carte .content-img img {
     position: relative;
     width: 100%;
     top: -60px;
   }
-  #restaurant .container-global .container-carte .content-img .img-4 {
+  #restaurant .container-global .container-global-carte .container-carte .content-img .img-4 {
     position: relative;
     width: 100%;
-    top: -80px;
+    top: -90px;
   }
-  #restaurant .container-global .container-carte .content-img .img-3 {
+  #restaurant .container-global .container-global-carte .container-carte .content-img .img-3 {
     position: relative;
     width: 100%;
-    top: -70px;
+    top: -85px;
   }
-  #restaurant .container-global .container-carte .content-img .img-2 {
+  #restaurant .container-global .container-global-carte .container-carte .content-img .img-2 {
     position: relative;
     width: 100%;
-    top: -160px;
+    top: -205px;
   }
-  #restaurant .container-global .container-carte .content-img p {
+  #restaurant .container-global .container-global-carte .container-carte .content-img p {
     position: absolute;
     top: 15px;
     right: 15px;
@@ -2861,50 +2843,6 @@ footer .content-link a {
     padding: 5px 10px;
     border-radius: 2px;
     color: green;
-  }
-  #restaurant .container-global .container-carte .container-information {
-    width: 100%;
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px 0 20px 20px;
-  }
-  #restaurant .container-global .container-carte .container-information .content-information h4 {
-    font-size: 20px;
-    margin-bottom: 5px;
-  }
-  #restaurant .container-global .container-carte .container-information .content-information p {
-    font-size: 18px;
-  }
-  #restaurant .container-global .container-carte .container-information .container-hearth {
-    position: relative;
-    right: 50px;
-    top: -15px;
-    cursor: pointer;
-  }
-  #restaurant .container-global .container-carte .container-information .container-hearth i {
-    font-size: 24px;
-  }
-  #restaurant .container-global .container-carte .container-information .icon-regular {
-    position: absolute;
-    opacity: 1;
-    transition: 0.5s ease-in;
-  }
-  #restaurant .container-global .container-carte .container-information .icon-solid {
-    background-image: linear-gradient(168deg, rgba(255, 121, 217, 0.87) 0%, rgba(147, 86, 220, 0.87) 100%);
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-    transition: 1s ease-in;
-    opacity: 0;
-    position: absolute;
-  }
-  #restaurant .container-global .container-carte .container-information .icon-solid:hover {
-    opacity: 1;
-  }
-  #restaurant .container-global .container-carte .container-information .container-hearth:hover .icon-regular {
-    opacity: 0;
   }
 }
 @media screen and (min-width: 1440px) {
@@ -2963,38 +2901,38 @@ footer .content-link a {
     align-items: flex-start;
   }
 
-  #restaurant .container-global .container-carte {
-    width: 32%;
+  #restaurant .container-global .container-global-carte {
+    width: 34%;
     height: 310px;
   }
-  #restaurant .container-global .container-carte .content-img {
+  #restaurant .container-global .container-global-carte .container-carte .content-img {
     width: 100%;
     height: 220px;
     border-radius: 20px 20px 0 0;
     position: relative;
     overflow: hidden;
   }
-  #restaurant .container-global .container-carte .content-img img {
+  #restaurant .container-global .container-global-carte .container-carte .content-img img {
     position: relative;
     width: 100%;
-    top: -120px;
+    top: -50px;
   }
-  #restaurant .container-global .container-carte .content-img .img-4 {
+  #restaurant .container-global .container-global-carte .container-carte .content-img .img-4 {
     position: relative;
     width: 100%;
-    top: -160px;
+    top: -100px;
   }
-  #restaurant .container-global .container-carte .content-img .img-3 {
+  #restaurant .container-global .container-global-carte .container-carte .content-img .img-3 {
     position: relative;
     width: 100%;
-    top: -160px;
+    top: -90px;
   }
-  #restaurant .container-global .container-carte .content-img .img-2 {
+  #restaurant .container-global .container-global-carte .container-carte .content-img .img-2 {
     position: relative;
     width: 100%;
-    top: -320px;
+    top: -235px;
   }
-  #restaurant .container-global .container-carte .content-img p {
+  #restaurant .container-global .container-global-carte .container-carte .content-img p {
     position: absolute;
     top: 15px;
     right: 15px;
