--- a/sass/_la-palette-du-gout.scss
+++ b/sass/_la-palette-du-gout.scss
@@ -633,6 +633,53 @@ header{
     }
 }
 
+@media screen and (min-width:1030px) {
+    header{
+        .palette-content-logo{
+            position: relative;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 15px 15px;
+            
+            
+            .back{
+                cursor: pointer;
+                font-size: 25px;
+                position: absolute;
+                top: 22px;
+                left: 30px;
+                z-index: 100;
+                text-decoration: none;
+                color: #000;
+            }
+    
+            img{
+                width: 300px;
+            }
+            
+            
+        }
+        .palette-container-img-header{
+            display: none;
+        }
+    }
+    #menu-palette{
+        width: 100%;
+        height: auto;
+        background: #f2f2f2;
+        padding:  50px 25px;
+        position: relative;
+        top: 70px;
+        border-radius: 50px 50px 0 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-top: 3px solid $color-tertiaire;
+    }
+    
+}
 @media screen and (min-width:1440px) {
 
     header{
