--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,7 +16,7 @@
 
 .loader-1{
     opacity: 0.6;
-    -webkit-animation: stop 0.1s linear 3s;
+    -webkit-animation: stop 0.1s linear 3s forwards;
     animation: stop 0.1s linear 3s forwards;
 }
     .finish{
@@ -27,6 +27,7 @@
         align-items: center;
         justify-content: center;
         animation: finish 0.1s linear 3s forwards;
+        -webkit-animation: finish 0.1s linear 3s forwards;
     }
     .loader-circle{
         position: absolute;
