--- a/sass/style.css
+++ b/sass/style.css
@@ -5,6 +5,8 @@ body {
 
 .loader-1 {
   opacity: 0.6;
+  -webkit-animation: stop linear 4s;
+  animation: stop 0.1s linear 4s forwards;
   width: 100%;
 }
 
@@ -15,6 +17,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  animation: finish 0.1s linear 2s forwards;
+  -webkit-animation: finish 0.1s linear 2s forwards;
   z-index: 10000;
 }
 
@@ -28,8 +32,8 @@ body {
   border-radius: 100px;
   border: 6px solid transparent;
   border-top-color: #9356dc;
-  -webkit-animation: spin 1s linear 10;
-  animation: spin 1s linear 10;
+  -webkit-animation: spin 5s linear;
+  animation: spin 5s linear;
 }
 
 .loader-circle::after {
@@ -58,8 +62,8 @@ body {
   border: 6px solid transparent;
   border-top-color: #99e2d0;
   opacity: 0.5s;
-  -webkit-animation: spin 5s linear 1s;
-  animation: spin 5s linear 1s;
+  -webkit-animation: spin 1s linear 5;
+  animation: spin 1s linear 5;
 }
 
 @keyframes spin {
@@ -2143,8 +2147,8 @@ header .palette-container-img-header .img-delice {
 
 .loader-1 {
   opacity: 0.6;
-  -webkit-animation: stop 0.1s linear 3s;
-  animation: stop 0.1s linear 3s forwards;
+  -webkit-animation: stop linear 4s forwards;
+  animation: stop linear 4s forwards;
 }
 
 .finish {
@@ -2154,7 +2158,8 @@ header .palette-container-img-header .img-delice {
   display: flex;
   align-items: center;
   justify-content: center;
-  animation: finish 0.1s linear 3s forwards;
+  animation: finish 0.1s linear 2s forwards;
+  -webkit-animation: finish 0.1s linear 2s forwards;
 }
 
 .loader-circle {
@@ -2167,8 +2172,8 @@ header .palette-container-img-header .img-delice {
   border-radius: 100px;
   border: 6px solid transparent;
   border-top-color: #9356dc;
-  -webkit-animation: spin 1s linear 10;
-  animation: spin 1s linear 10;
+  -webkit-animation: spin 1s linear 5;
+  animation: spin 1s linear 5;
 }
 
 .loader-circle::after {
@@ -2182,8 +2187,8 @@ header .palette-container-img-header .img-delice {
   border: 6px solid transparent;
   border-top-color: #ff79da;
   opacity: 0.8s;
-  -webkit-animation: spin 1s linear 5;
-  animation: spin 1s linear 5;
+  -webkit-animation: spin 1s linear 10;
+  animation: spin 1s linear 10;
 }
 
 .loader-circle::before {
@@ -2197,8 +2202,8 @@ header .palette-container-img-header .img-delice {
   border: 6px solid transparent;
   border-top-color: #99e2d0;
   opacity: 0.5s;
-  -webkit-animation: spin 5s linear 1s;
-  animation: spin 5s linear 1s;
+  -webkit-animation: spin 2s linear 5;
+  animation: spin 2s linear 5;
 }
 
 @keyframes spin {
