--- a/sass/_a-la-francaise.scss
+++ b/sass/_a-la-francaise.scss
@@ -33,7 +33,7 @@ header{
         margin-bottom: 50px;
         
         h3{
-            font-size: 22px;
+            font-size: 30px;
             font-family: 'Shrikhand', cursive;
             font-weight: 400;
            
@@ -85,7 +85,7 @@ header{
     }
     
     h4{
-        font-size: 22px;
+        font-size: 18px;
         font-weight: 400;
         margin-bottom: 5px;
        
@@ -116,7 +116,7 @@ header{
                 h3{
                     padding-top: 20px;
                     padding-left: 20px;
-                    font-size: 16px;
+                    font-size: 18px;
                     font-weight: 700;
                     margin-bottom: 10px;
                 }
@@ -133,16 +133,16 @@ header{
 
         .content-display-for-animation .validation{
             position: relative;
-            top: -49px;
+            top: -55px;
             right: -76px;
             width: 85px;
-            height: 91px;
+            height: 95px;
             background: $color-tertiaire;
             border-radius: 0 25px 25px 0;
             display: flex;
             justify-content: flex-end;
             align-items: center;
-        
+            padding-right: 5px;
         }
      
         .validation i{
@@ -157,8 +157,8 @@ header{
             display: flex;
         }
         .content-display h4{
-            font-size: 12px;
-            font-weight: 500;
+            font-size: 14px;
+            font-weight: 400;
             margin-right: 15px;
         }
         .content-display p{
@@ -167,36 +167,36 @@ header{
             
         }
         .content-1 h4{
-            margin-right: 145px;
+            margin-right: 125px;
         }
         .content-2 h4{
-            margin-right: 85px;
+            margin-right: 55px;
         }
         .content-3 h4{
-            margin-right: 190px;
+            margin-right: 185px;
         }
         .content-4 h4{
-            margin-right: 50px;
+            margin-right: 20px;
         }
         .content-5 h4{
-            margin-right: 60px;
+            margin-right: 30px;
         }
         .content-6 h4{
-            margin-right: 50px;
+            margin-right: 15px;
         }
         .content-7 h4{
-            margin-right: 130px;
+            margin-right: 110px;
         }
         .content-8 h4{
-            margin-right: 195px;
+            margin-right: 185px;
         }
         .content-9 h4{
-            margin-right: 105px;
+            margin-right: 80px;
         }
         .content-display p{
             position: relative;
             right: -30px;
-            font-size: 12px;
+            font-size: 14px;
             font-weight: 600;
             transition: 0.9s;
         }
