--- a/sass/_la-palette-du-gout.scss
+++ b/sass/_la-palette-du-gout.scss
@@ -157,7 +157,7 @@ header{
         margin-bottom: 50px;
         
         h3{
-            font-size: 25px;
+            font-size: 30px;
             font-family: 'Shrikhand', cursive;
             font-weight: 400;
            
@@ -208,7 +208,7 @@ header{
     }
     
     h4{
-        font-size: 22px;
+        font-size: 18px;
         font-weight: 400;
         margin-bottom: 5px;
     }
@@ -239,7 +239,7 @@ header{
                 h3{
                     padding-top: 20px;
                     padding-left: 20px;
-                    font-size: 16px;
+                    font-size: 18px;
                     font-weight: 700;
                     margin-bottom: 10px;
                 }
@@ -258,16 +258,16 @@ header{
 
         .content-display-for-animation .validation{
             position: relative;
-            top: -49px;
+            top: -55px;
             right: -76px;
             width: 85px;
-            height: 91px;
+            height: 95px;
             background: $color-tertiaire;
             border-radius: 0 25px 25px 0;
             display: flex;
             justify-content: flex-end;
             align-items: center;
-            
+            padding-right: 5px;
         }
      
         .validation i{
@@ -282,29 +282,29 @@ header{
             display: flex;
         }
         .content-display h4{
-            font-size: 12px;
-            font-weight: 500;
+            font-size: 14px;
+            font-weight: 400;
             margin-right: 15px;
         }
         .content-display p{
-            font-size: 12px;
+            font-size: 14px;
             font-weight: 700;
             transition: 0.9s;
         }
         .content-1 h4{
-            margin-right: 125px;
+            margin-right: 112px;
         }
         .content-2 h4{
-            margin-right: 85px;
+            margin-right: 70px;
         }
         .content-3 h4{
-            margin-right: 30px;
+            margin-right: 5px;
         }
         .content-4 h4{
-            margin-right: 30px;
+            margin-right: 0px;
         }
         .content-5 h4{
-            margin-right: 30px;
+            margin-right: 5px;
         }
         .content-6 h4{
             margin-right: 166px;
@@ -313,10 +313,10 @@ header{
             margin-right: 200px;
         }
         .content-8 h4{
-            margin-right: 102px;
+            margin-right: 80px;
         }
         .content-9 h4{
-            margin-right: 35px;
+            margin-right: 5px;
         }
         .content-display p{
             position: relative;
@@ -339,11 +339,11 @@ header{
         }
         .container:hover .validation{
             
-            transform: translate(-85px);
+            transform: translate(-75px);
         }
         .container:hover p{
             
-            transform: translate(-55px);
+            transform: translate(-45px);
         }
         .container:hover i{
             
