--- a/sass/_le-delice-des-sens.scss
+++ b/sass/_le-delice-des-sens.scss
@@ -33,7 +33,7 @@ header{
         margin-bottom: 50px;
         
         h3{
-            font-size: 22px;
+            font-size: 30px;
             font-family: 'Shrikhand', cursive;
             font-weight: 400;
            
@@ -81,7 +81,7 @@ header{
 
     
     h4{
-        font-size: 22px;
+        font-size: 18px;
         font-weight: 400;
         margin-bottom: 5px;
     }
@@ -111,7 +111,7 @@ header{
                 h3{
                     padding-top: 20px;
                     padding-left: 20px;
-                    font-size: 16px;
+                    font-size: 18px;
                     font-weight: 700;
                     margin-bottom: 10px;
                 }
@@ -128,16 +128,16 @@ header{
 
         .content-display-for-animation .validation{
             position: relative;
-            top: -49px;
+            top: -55px;
             right: -76px;
             width: 85px;
-            height: 91px;
+            height: 95px;
             background: $color-tertiaire;
             border-radius: 0 25px 25px 0;
             display: flex;
             justify-content: flex-end;
             align-items: center;
-        
+            padding-right: 5px;
         }
      
         .validation i{
@@ -152,32 +152,32 @@ header{
             display: flex;
         }
         .content-display h4{
-            font-size: 12px;
-            font-weight: 500;
+            font-size: 14px;
+            font-weight: 400;
             margin-right: 15px;
         }
         .content-display p{
-            font-size: 12px;
+            font-size: 14px;
             font-weight: 700;
             
         }
         .content-1 h4{
-            margin-right: 130px;
+            margin-right: 120px;
         }
         .content-2 h4{
-            margin-right: 60px;
+            margin-right: 35px;
         }
         .content-3 h4{
-            margin-right: 180px;
+            margin-right: 170px;
         }
         .content-4 h4{
-            margin-right: 130px;
+            margin-right: 110px;
         }
         .content-5 h4{
-            margin-right: 105px;
+            margin-right: 80px;
         }
         .content-6 h4{
-            margin-right: 125px;
+            margin-right: 110px;
         }
         .content-7 h4{
             margin-right: 196px;
@@ -186,12 +186,12 @@ header{
             margin-right: 195px;
         }
         .content-9 h4{
-            margin-right: 170px;
+            margin-right: 165px;
         }
         .content-display p{
             position: relative;
             right: -30px;
-            font-size: 12px;
+            font-size: 14px;
             font-weight: 600;
             transition: 0.9s;
         }
@@ -439,54 +439,14 @@ header{
                     margin-right: 75px;
                     
                 }
-                .content-2 {
-                    height: 110px;
-                    
-                    h3{
-                        max-width: 300px;
-                    }
-
-                    .content-display-for-animation .validation{
-                        position: relative;
-                        top: -78px;
-                        right: -76px;
-                        width: 85px;
-                        height: 111px;
-                        background: $color-tertiaire;
-                        border-radius: 0 25px 25px 0;
-                        display: flex;
-                        justify-content: flex-end;
-                        align-items: center;
-                        
-                    }
-                }
+                
                 .content-3 h4{
                     margin-right: 215px;
                 }
                 .content-4 h4{
                     margin-right: 150px;
                 }
-                .content-4 {
-                    height: 110px;
-                    
-                    h3{
-                        max-width: 300px;
-                    }
-
-                    .content-display-for-animation .validation{
-                        position: relative;
-                        top: -78px;
-                        right: -76px;
-                        width: 85px;
-                        height: 111px;
-                        background: $color-tertiaire;
-                        border-radius: 0 25px 25px 0;
-                        display: flex;
-                        justify-content: flex-end;
-                        align-items: center;
-                        
-                    }
-                }
+                
                 .content-5 h4{
                     margin-right: 120px;
                 }
