--- a/sass/style.css
+++ b/sass/style.css
@@ -146,7 +146,7 @@ header .palette-container-img-header img {
   margin-bottom: 50px;
 }
 #menu-palette .palette-menu-titre h3 {
-  font-size: 25px;
+  font-size: 30px;
   font-family: "Shrikhand", cursive;
   font-weight: 400;
 }
@@ -188,7 +188,7 @@ header .palette-container-img-header img {
   height: auto;
 }
 #menu-palette h4 {
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 400;
   margin-bottom: 5px;
 }
@@ -217,7 +217,7 @@ header .palette-container-img-header img {
 #menu-palette .btn .container h3 {
   padding-top: 20px;
   padding-left: 20px;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 700;
   margin-bottom: 10px;
 }
@@ -229,15 +229,16 @@ header .palette-container-img-header img {
 }
 #menu-palette .btn .content-display-for-animation .validation {
   position: relative;
-  top: -49px;
+  top: -55px;
   right: -76px;
   width: 85px;
-  height: 91px;
+  height: 95px;
   background: #99e2d0;
   border-radius: 0 25px 25px 0;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  padding-right: 5px;
 }
 #menu-palette .btn .validation i {
   font-size: 30px;
@@ -251,29 +252,29 @@ header .palette-container-img-header img {
   display: flex;
 }
 #menu-palette .btn .content-display h4 {
-  font-size: 12px;
-  font-weight: 500;
+  font-size: 14px;
+  font-weight: 400;
   margin-right: 15px;
 }
 #menu-palette .btn .content-display p {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 700;
   transition: 0.9s;
 }
 #menu-palette .btn .content-1 h4 {
-  margin-right: 125px;
+  margin-right: 112px;
 }
 #menu-palette .btn .content-2 h4 {
-  margin-right: 85px;
+  margin-right: 70px;
 }
 #menu-palette .btn .content-3 h4 {
-  margin-right: 30px;
+  margin-right: 5px;
 }
 #menu-palette .btn .content-4 h4 {
-  margin-right: 30px;
+  margin-right: 0px;
 }
 #menu-palette .btn .content-5 h4 {
-  margin-right: 30px;
+  margin-right: 5px;
 }
 #menu-palette .btn .content-6 h4 {
   margin-right: 166px;
@@ -282,10 +283,10 @@ header .palette-container-img-header img {
   margin-right: 200px;
 }
 #menu-palette .btn .content-8 h4 {
-  margin-right: 102px;
+  margin-right: 80px;
 }
 #menu-palette .btn .content-9 h4 {
-  margin-right: 35px;
+  margin-right: 5px;
 }
 #menu-palette .btn .content-display p {
   position: relative;
@@ -307,10 +308,10 @@ header .palette-container-img-header img {
   transition: 0.3s ease-in-out;
 }
 #menu-palette .btn .container:hover .validation {
-  transform: translate(-85px);
+  transform: translate(-75px);
 }
 #menu-palette .btn .container:hover p {
-  transform: translate(-55px);
+  transform: translate(-45px);
 }
 #menu-palette .btn .container:hover i {
   transform: translateX(-30px) rotate(-360deg);
@@ -672,7 +673,7 @@ header .palette-container-img-header .img-enchantee {
   margin-bottom: 50px;
 }
 #menu-enchantee .enchantee-menu-titre h3 {
-  font-size: 22px;
+  font-size: 30px;
   font-family: "Shrikhand", cursive;
   font-weight: 400;
 }
@@ -706,14 +707,14 @@ header .palette-container-img-header .img-enchantee {
   opacity: 0;
 }
 #menu-enchantee .repas .titre-repas {
-  margin-left: 15px;
+  margin-left: 0px;
 }
 #menu-enchantee .entree {
   width: 100%;
   height: auto;
 }
 #menu-enchantee h4 {
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 400;
   margin-bottom: 5px;
 }
@@ -722,7 +723,7 @@ header .palette-container-img-header .img-enchantee {
   height: 3px;
   background-color: #99e2d0;
   margin-bottom: 20px;
-  margin-left: 15px;
+  margin-left: 0px;
 }
 #menu-enchantee .btn {
   width: 100%;
@@ -743,7 +744,7 @@ header .palette-container-img-header .img-enchantee {
 #menu-enchantee .btn .container h3 {
   padding-top: 20px;
   padding-left: 20px;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 700;
   margin-bottom: 10px;
 }
@@ -755,15 +756,16 @@ header .palette-container-img-header .img-enchantee {
 }
 #menu-enchantee .btn .content-display-for-animation .validation {
   position: relative;
-  top: -49px;
+  top: -55px;
   right: -76px;
   width: 85px;
-  height: 91px;
+  height: 95px;
   background: #99e2d0;
   border-radius: 0 25px 25px 0;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  padding-right: 5px;
 }
 #menu-enchantee .btn .validation i {
   font-size: 30px;
@@ -777,8 +779,8 @@ header .palette-container-img-header .img-enchantee {
   display: flex;
 }
 #menu-enchantee .btn .content-display h4 {
-  font-size: 12px;
-  font-weight: 500;
+  font-size: 14px;
+  font-weight: 400;
   margin-right: 15px;
 }
 #menu-enchantee .btn .content-display p {
@@ -787,39 +789,39 @@ header .palette-container-img-header .img-enchantee {
   transition: 0.9s;
 }
 #menu-enchantee .btn .content-1 h4 {
-  margin-right: 30px;
+  margin-right: 0px;
 }
 #menu-enchantee .btn .content-2 h4 {
-  margin-right: 85px;
+  margin-right: 60px;
 }
 #menu-enchantee .btn .content-3 h4 {
-  margin-right: 100px;
+  margin-right: 80px;
 }
 #menu-enchantee .btn .content-4 h4 {
-  margin-right: 70px;
+  margin-right: 45px;
 }
 #menu-enchantee .btn .content-5 h4 {
-  margin-right: 100px;
+  margin-right: 80px;
 }
 #menu-enchantee .btn .content-6 h4 {
-  margin-right: 120px;
+  margin-right: 100px;
 }
 #menu-enchantee .btn .content-7 h4 {
-  margin-right: 65px;
+  margin-right: 32px;
 }
 #menu-enchantee .btn .content-8 h4 {
-  margin-right: 20px;
+  margin-right: 0px;
 }
 #menu-enchantee .btn .content-9 h4 {
-  margin-right: 110px;
+  margin-right: 85px;
 }
 #menu-enchantee .btn .content-10 h4 {
-  margin-right: 170px;
+  margin-right: 165px;
 }
 #menu-enchantee .btn .content-display p {
   position: relative;
   right: -30px;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 600;
 }
 #menu-enchantee .btn .dot {
@@ -836,10 +838,10 @@ header .palette-container-img-header .img-enchantee {
   transition: 0.3s ease-in-out;
 }
 #menu-enchantee .btn .container:hover .validation {
-  transform: translate(-85px);
+  transform: translate(-75px);
 }
 #menu-enchantee .btn .container:hover p {
-  transform: translate(-55px);
+  transform: translate(-45px);
 }
 #menu-enchantee .btn .container:hover i {
   transform: translateX(-30px) rotate(-360deg);
@@ -1168,7 +1170,7 @@ header .palette-container-img-header .img-francaise {
   margin-bottom: 50px;
 }
 #menu-francaise .palette-menu-titre h3 {
-  font-size: 22px;
+  font-size: 30px;
   font-family: "Shrikhand", cursive;
   font-weight: 400;
 }
@@ -1210,7 +1212,7 @@ header .palette-container-img-header .img-francaise {
   height: auto;
 }
 #menu-francaise h4 {
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 400;
   margin-bottom: 5px;
 }
@@ -1239,7 +1241,7 @@ header .palette-container-img-header .img-francaise {
 #menu-francaise .btn .container h3 {
   padding-top: 20px;
   padding-left: 20px;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 700;
   margin-bottom: 10px;
 }
@@ -1251,15 +1253,16 @@ header .palette-container-img-header .img-francaise {
 }
 #menu-francaise .btn .content-display-for-animation .validation {
   position: relative;
-  top: -49px;
+  top: -55px;
   right: -76px;
   width: 85px;
-  height: 91px;
+  height: 95px;
   background: #99e2d0;
   border-radius: 0 25px 25px 0;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  padding-right: 5px;
 }
 #menu-francaise .btn .validation i {
   font-size: 30px;
@@ -1273,8 +1276,8 @@ header .palette-container-img-header .img-francaise {
   display: flex;
 }
 #menu-francaise .btn .content-display h4 {
-  font-size: 12px;
-  font-weight: 500;
+  font-size: 14px;
+  font-weight: 400;
   margin-right: 15px;
 }
 #menu-francaise .btn .content-display p {
@@ -1282,36 +1285,36 @@ header .palette-container-img-header .img-francaise {
   font-weight: 700;
 }
 #menu-francaise .btn .content-1 h4 {
-  margin-right: 145px;
+  margin-right: 125px;
 }
 #menu-francaise .btn .content-2 h4 {
-  margin-right: 85px;
+  margin-right: 55px;
 }
 #menu-francaise .btn .content-3 h4 {
-  margin-right: 190px;
+  margin-right: 185px;
 }
 #menu-francaise .btn .content-4 h4 {
-  margin-right: 50px;
+  margin-right: 20px;
 }
 #menu-francaise .btn .content-5 h4 {
-  margin-right: 60px;
+  margin-right: 30px;
 }
 #menu-francaise .btn .content-6 h4 {
-  margin-right: 50px;
+  margin-right: 15px;
 }
 #menu-francaise .btn .content-7 h4 {
-  margin-right: 130px;
+  margin-right: 110px;
 }
 #menu-francaise .btn .content-8 h4 {
-  margin-right: 195px;
+  margin-right: 185px;
 }
 #menu-francaise .btn .content-9 h4 {
-  margin-right: 105px;
+  margin-right: 80px;
 }
 #menu-francaise .btn .content-display p {
   position: relative;
   right: -30px;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 600;
   transition: 0.9s;
 }
@@ -1650,7 +1653,7 @@ header .palette-container-img-header .img-delice {
   margin-bottom: 50px;
 }
 #menu-delice .palette-menu-titre h3 {
-  font-size: 22px;
+  font-size: 30px;
   font-family: "Shrikhand", cursive;
   font-weight: 400;
 }
@@ -1688,7 +1691,7 @@ header .palette-container-img-header .img-delice {
   height: auto;
 }
 #menu-delice h4 {
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 400;
   margin-bottom: 5px;
 }
@@ -1717,7 +1720,7 @@ header .palette-container-img-header .img-delice {
 #menu-delice .btn .container h3 {
   padding-top: 20px;
   padding-left: 20px;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 700;
   margin-bottom: 10px;
 }
@@ -1729,15 +1732,16 @@ header .palette-container-img-header .img-delice {
 }
 #menu-delice .btn .content-display-for-animation .validation {
   position: relative;
-  top: -49px;
+  top: -55px;
   right: -76px;
   width: 85px;
-  height: 91px;
+  height: 95px;
   background: #99e2d0;
   border-radius: 0 25px 25px 0;
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  padding-right: 5px;
 }
 #menu-delice .btn .validation i {
   font-size: 30px;
@@ -1751,31 +1755,31 @@ header .palette-container-img-header .img-delice {
   display: flex;
 }
 #menu-delice .btn .content-display h4 {
-  font-size: 12px;
-  font-weight: 500;
+  font-size: 14px;
+  font-weight: 400;
   margin-right: 15px;
 }
 #menu-delice .btn .content-display p {
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 700;
 }
 #menu-delice .btn .content-1 h4 {
-  margin-right: 130px;
+  margin-right: 120px;
 }
 #menu-delice .btn .content-2 h4 {
-  margin-right: 60px;
+  margin-right: 35px;
 }
 #menu-delice .btn .content-3 h4 {
-  margin-right: 180px;
+  margin-right: 170px;
 }
 #menu-delice .btn .content-4 h4 {
-  margin-right: 130px;
+  margin-right: 110px;
 }
 #menu-delice .btn .content-5 h4 {
-  margin-right: 105px;
+  margin-right: 80px;
 }
 #menu-delice .btn .content-6 h4 {
-  margin-right: 125px;
+  margin-right: 110px;
 }
 #menu-delice .btn .content-7 h4 {
   margin-right: 196px;
@@ -1784,12 +1788,12 @@ header .palette-container-img-header .img-delice {
   margin-right: 195px;
 }
 #menu-delice .btn .content-9 h4 {
-  margin-right: 170px;
+  margin-right: 165px;
 }
 #menu-delice .btn .content-display p {
   position: relative;
   right: -30px;
-  font-size: 12px;
+  font-size: 14px;
   font-weight: 600;
   transition: 0.9s;
 }
@@ -1980,47 +1984,11 @@ header .palette-container-img-header .img-delice {
   #menu-delice .repas-delice .btn .content-2 h4 {
     margin-right: 75px;
   }
-  #menu-delice .repas-delice .btn .content-2 {
-    height: 110px;
-  }
-  #menu-delice .repas-delice .btn .content-2 h3 {
-    max-width: 300px;
-  }
-  #menu-delice .repas-delice .btn .content-2 .content-display-for-animation .validation {
-    position: relative;
-    top: -78px;
-    right: -76px;
-    width: 85px;
-    height: 111px;
-    background: #99e2d0;
-    border-radius: 0 25px 25px 0;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
   #menu-delice .repas-delice .btn .content-3 h4 {
     margin-right: 215px;
   }
   #menu-delice .repas-delice .btn .content-4 h4 {
     margin-right: 150px;
-  }
-  #menu-delice .repas-delice .btn .content-4 {
-    height: 110px;
-  }
-  #menu-delice .repas-delice .btn .content-4 h3 {
-    max-width: 300px;
-  }
-  #menu-delice .repas-delice .btn .content-4 .content-display-for-animation .validation {
-    position: relative;
-    top: -78px;
-    right: -76px;
-    width: 85px;
-    height: 111px;
-    background: #99e2d0;
-    border-radius: 0 25px 25px 0;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
   }
   #menu-delice .repas-delice .btn .content-5 h4 {
     margin-right: 120px;
@@ -2153,6 +2121,7 @@ header .palette-container-img-header .img-delice {
   opacity: 0.6;
   -webkit-animation: stop linear 4s forwards;
   animation: stop linear 4s forwards;
+  z-index: 1000;
 }
 
 .finish {
@@ -2222,11 +2191,11 @@ header .palette-container-img-header .img-delice {
 }
 @keyframes stop {
   0% {
+    pointer-events: none;
     opacity: 0.6;
   }
   100% {
     opacity: 1;
-    z-index: -10;
   }
 }
 @keyframes finish {
@@ -2331,6 +2300,9 @@ header .container-titre button:hover {
   justify-content: center;
   align-items: center;
   margin: 60px 0;
+  z-index: -1;
+  background: #fff;
+  padding-top: 20px;
 }
 #presentation h3 {
   align-self: flex-start;
@@ -2359,7 +2331,7 @@ header .container-titre button:hover {
   transition: 0.2s ease-in;
   cursor: pointer;
 }
-#presentation .container-choix .content-carte-presentation:active {
+#presentation .container-choix .content-carte-presentation:hover {
   background: #9256dc11;
   box-shadow: 5px 4px 5px 0px #8b8a8a;
 }
@@ -2381,7 +2353,7 @@ header .container-titre button:hover {
   color: rgba(0, 0, 0, 0.712);
   transition: 0.4s ease-in-out;
 }
-#presentation .container-choix .content-carte-presentation:active i {
+#presentation .container-choix .content-carte-presentation:hover i {
   color: #9356dc;
 }
 
@@ -2394,6 +2366,7 @@ header .container-titre button:hover {
   justify-content: center;
   background: #f2f2f2be;
   padding: 60px 0;
+  z-index: -1;
 }
 #restaurant .container-global {
   width: 100%;
@@ -2424,7 +2397,6 @@ header .container-titre button:hover {
   border-radius: 20px;
   overflow: hidden;
   margin-bottom: 50px;
-  z-index: 1;
   cursor: pointer;
   color: #000;
 }
@@ -2472,7 +2444,6 @@ header .container-titre button:hover {
   align-items: center;
   padding: 0px 0 20px 20px;
   position: relative;
-  z-index: 1000;
 }
 #restaurant .container-global .container-global-carte .container-carte .container-information .content-information h4 {
   font-size: 18px;
@@ -2486,18 +2457,15 @@ header .container-titre button:hover {
   right: 50px;
   bottom: 60px;
   cursor: pointer;
-  z-index: 1000;
 }
 #restaurant .container-global .container-global-carte .container-hearth i {
   position: absolute;
   font-size: 22px;
-  z-index: 1000;
 }
 #restaurant .container-global .container-global-carte .icon-regular {
   position: absolute;
   opacity: 1;
   transition: 0.5s ease-in;
-  z-index: 1000;
 }
 #restaurant .container-global .container-global-carte .icon-solid {
   background-image: linear-gradient(168deg, rgba(255, 121, 217, 0.87) 0%, rgba(147, 86, 220, 0.87) 100%);
@@ -2507,7 +2475,6 @@ header .container-titre button:hover {
   transition: 1s ease-in;
   opacity: 0;
   position: absolute;
-  z-index: 1000;
 }
 #restaurant .container-global .container-global-carte .icon-solid:hover {
   opacity: 1;
@@ -2522,6 +2489,7 @@ footer {
   padding: 30px;
   background: #333;
   color: #fff;
+  z-index: -1;
 }
 footer h4 {
   font-size: 22px;
@@ -2555,7 +2523,6 @@ footer .content-link a {
   header form {
     width: 100%;
     height: 60px;
-    z-index: 1;
     position: absolute;
   }
   header form input {
@@ -2568,7 +2535,6 @@ footer .content-link a {
     outline: none;
     background: #e6e6e6;
     border: none;
-    z-index: 1;
     box-shadow: inset 0px 1px 3px 0px rgba(26, 25, 25, 0.445);
     color: rgba(0, 0, 0, 0.712);
   }
