--- a/sass/_note-enchantee.scss
+++ b/sass/_note-enchantee.scss
@@ -34,7 +34,7 @@ header{
        
         
         h3{
-            font-size: 30px;
+            font-size: 28px;
             font-family: 'Shrikhand', cursive;
             font-weight: 400;
            
@@ -76,7 +76,7 @@ header{
     }
     .repas{
         .titre-repas{
-            margin-left: 0px;
+            margin-left: 15px;
            
         }
     }
@@ -88,16 +88,16 @@ header{
 
     
     h4{
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 400;
         margin-bottom: 5px;
     }
     .border-bottom-titre{
-        width: 60px;
+        width: 50px;
         height: 3px;
         background-color: $color-tertiaire;
         margin-bottom: 20px;
-        margin-left: 0px;
+        margin-left: 15px;
     }
     .btn{
         width: 100%;
@@ -108,7 +108,7 @@ header{
 
             .container{
             width: 355px;
-            height: 85px;
+            height: 75px;
             background: #fff;
             border-radius: 25px;
             margin-bottom: 30px;
@@ -117,7 +117,7 @@ header{
             box-shadow: 5px 4px 5px 0px #c9c6c6;
 
                 h3{
-                    padding-top: 20px;
+                    padding-top: 15px;
                     padding-left: 20px;
                     font-size: 18px;
                     font-weight: 700;
@@ -313,7 +313,7 @@ header{
         background: linear-gradient(168deg, #ff79da 0%, #9356dc 100%);
         transition: 0.2s ease-in;
         cursor: pointer;
-        &:active{
+        &:hover{
             background: rgb(255,121,218);
             background: linear-gradient(168deg, rgba(255, 121, 217, 0.87) 0%, rgba(147,86,220,0.87) 100%);
             box-shadow: 5px 4px 5px 0px #8b8a8a;
@@ -399,7 +399,7 @@ header{
          .repas-enchantee{
              width: 100%;
              h4{
-                 font-size: 25px;
+                 font-size: 22px;
              }
 
              .container{
@@ -454,7 +454,7 @@ header{
                     margin-right: 75px;
                 }
                 .content-8 h4{
-                    margin-right: 20px;
+                    margin-right: 45px;
                 }
                 .content-9 h4{
                     margin-right: 125px;
