--- a/sass/style.scss
+++ b/sass/style.scss
@@ -540,6 +540,7 @@ footer{
 
     #presentation{
         margin-bottom: 0px;
+        background: #f2f2f2;
         .container-choix{
             width: 100%;
             display: flex;
