--- a/sass/_note-enchantee.scss
+++ b/sass/_note-enchantee.scss
@@ -205,45 +205,69 @@ header{
             font-size: 14px;
             font-weight: 600;
         }
-        .dot{
-            position: absolute;
-            opacity: 0;
-            transform: 1.2s;
+        .titre-overflow{
+            white-space: nowrap;
+            width: 300px;
+            overflow: hidden;
+            text-overflow: ellipsis; 
+            transition: 0.9s;
         }
-        .remove{
-            opacity: 1;
-            transition: 0.6s ease-in-out;
+        .overflow{
+            white-space: nowrap;
+            width: 260px;
+            overflow: hidden;
+            text-overflow: ellipsis; 
+            transition: 0.9s;
         }
-        .remove-2{
-            opacity: 1;
-            transition: 0.3s ease-in-out;
+        .prix-overflow{
+            position: relative;
+            
         }
+       
         .container:hover .validation{
             
             transform: translate(-75px);
+        }
+        .container:hover .validation-overflow{
+            
+            transform: translate(-45px);
+        }
+        .container:hover .validation-change{
+            
+            transform: translate(-45px);
         }
         .container:hover p{
             
             transform: translate(-45px);
         }
+        .container:hover .prix-overflow{
+            
+            transform: translate(-15px);
+        }
+
+        .container:hover .prix-change{
+            
+            transform: translate(-5px);
+        }
         .container:hover i{
             
             transform: translateX(-30px) rotate(-360deg);
         }
-        .container:hover .dot{
-            
-            opacity: 1;
+        
+        .container:hover .overflow{
+            width: 210px;
         }
-        .container:hover .remove{
-            
-            opacity: 0;
-        }
-        .container:hover .remove-2{
-            
-            opacity: 0;
+        .container:hover .titre-overflow{
+            width: 250px;
         }
        
-        
+       
+        .content-display .prix-change{
+            position: relative;
+            right: -15px;
+            
+        }
+
         .content-1{
             animation: aparition 0.8s  0.1s ease-out;
         }
@@ -643,8 +667,13 @@ header{
             .container{
                 margin-right: 30px;
             }
-
+            .container:hover .validation-overflow{
             
+                transform: translate(-55px);
+            }
+            .container:hover .overflow{
+                width: 220px;
+            }
         }
 
         button{
